make sure everything is above the stepchart (z-index)

--- a/components/StepchartPage.module.css
+++ b/components/StepchartPage.module.css
@@ -1,6 +1,7 @@
-.imageFrame {
+.aboveStepChart {
     z-index: 999999;
 }
+
 
 .stepchartSections {
     @apply flex flex-col;
